# mesh-voxelization

./: CMakeLists.txt  README.md  main.cpp
box_triangle/: aabb_triangle_overlap.h
cmake/: FindEigen3.cmake  LibFindMacros.cmake
examples/: fill_occupancy.py  filled.h5  marching_cubes.py  occ_to_off.py  off_to_obj.py  read_hdf5.cpp  scale_off.py
examples/input/: 0.off  1.off  2.off  3.off  4.off
examples/output/: 1.off
examples/output_sdf/: 0.off  1.off  2.off  3.off  4.off
examples/raw/: 0.off  1.off  2.off  3.off  4.off
triangle_point/: README.md  poitri.h
triangle_ray/: raytri.h
